1/27/2026 bis
	Added support for variable exterior clues for some common exterior constraints which can be used in other constraints, and included some test cases.
	Note: I try not to do this, but there may be some backward compatibility issues. For constraints where this has been implemented, if you abused the API by passing a variable to emulate this functionality, this passed variable will be ignored and left to flap. The good news is that this functionality does exactly what you were trying to do, so it should be readily fixable.

1/27/2026
	Implemented squishdoku class, added several test cases.
	Squashed a bug in quattroQuadri and scarySudoku.
	
1/25/2026
	Added several test cases.
	Updated Russian dolls code to allow multiple dolls per row/column. Added test case. (h/t Timotab and Richard Stolk)
	Added biggest neighbor/smallest neighbor constraints, and test case.

1/24/2026 bis
	Added support for cross-grid multi sudoku line constraints.

1/24/2026
	I had other things to do than this too, but oh well. Implemented partition lines, which use some criterion to partition a line into segments (e.g. regions like in equal sum lines, runs of constant parity, or ascending/descending digits), and evaluates the set of segments, e.g. all the same/different, one is greater than some value, etc. There are sum and count versions for evaluation. Test cases added.

1/23/2026
	Well, this was probably a dumb idea. Plan was to implement test harness for multi-sudoku, so I can test the sohei and samurai functions. Ended up revamping the entire solution printing code. To be fair, it desperately needed it, since that was pretty OG, but not what I was planning for today.
	And then, I just refactored all of multi-sudoku. I really had other things to do today. But there's some Samurai test cases now, and the code is a lot more modular and effective. And the documentation is actually accurate.

1/20/2026 bis